@@ -5,6 +5,9 @@
 1760.	[bug]		Host / net unreachable was not penalising rtt
 			estimates. [RT #12970]
 
+1759.	[bug]		Named failed to startup if the OS supported IPv6
+			but had no IPv6 interfaces configured. [RT #12942]
+
 1754.	[bug]		We wern't always attempting to query the parent
 			server for the DS records at the zone cut.
 			[RT #12774]
